# static-keys

./: Cargo.toml  README.md  book.toml  build.rs
.github/workflows/: ci.yml  mdbook.yml
CHANGELOG/: v0.5.0.md  v0.6.0.md  v0.6.1.md  v0.6.2.md  v0.7.0.md  v0.8.0.md  v0.8.1.md
docs/: FAQs.md  README.md  internal-design.md
docs/en/: book.toml
docs/en/src/: FAQs.md  README.md  SUMMARY.md  internal-design.md
docs/zh-Hans/: book.toml
docs/zh-Hans/src/: FAQs.md  README.md  SUMMARY.md  internal-design.md
examples/: usage.rs
src/: code_manipulate.rs  lib.rs
src/arch/: aarch64.rs  loongarch64.rs  mod.rs  riscv64.rs  x86.rs  x86_64.rs
src/os/: linux.rs  macos.rs  mod.rs  none.rs  windows.rs
tests/: basic.rs  ui_test.rs
tests/ui/: no_entries.rs
