[package]
name = "static-keys"
version = "0.2.0"
edition = "2021"
authors = ["Evian-Zhang <evianzhang1999@163.com>"]
license = "MIT OR Apache-2.0"
description = "Static keys for Rust userland applications."
homepage = "https://evian-zhang.github.io/static-keys/"
documentation = "https://docs.rs/static-keys"
repository = "https://github.com/Evian-Zhang/static-keys"
readme = "README.md"
keywords = ["static-keys", "Linux-kernel"]
categories = ["rust-patterns", "no-std"]

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2", default-features = false }

[dev-dependencies]
trybuild = "1"
