[package]
name = "static-keys"
version = "0.4.0"
edition = "2021"
authors = ["Evian-Zhang <evianzhang1999@163.com>"]
license = "MIT OR Apache-2.0"
description = "Reimplement Linux kernel static keys for Rust userland applications."
homepage = "https://evian-zhang.github.io/static-keys/en/"
documentation = "https://docs.rs/static-keys"
repository = "https://github.com/Evian-Zhang/static-keys"
readme = "README.md"
keywords = ["static-keys", "Linux-kernel"]
categories = ["rust-patterns", "no-std"]

[badges]
maintenance = { status = "actively-developed" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_System_SystemInformation", "Win32_System_Memory", "Win32_System_Threading", "Win32_System_Diagnostics_Debug"] }

[dev-dependencies]
trybuild = "1"
